# project-1

./: .gitignore  README.md  dataset.py  main.py  model.py  pyproject.toml  run.sh  utils.py
src/project_1/: dataset.py  main.py  model.py  sample.py  utils.py  vocab.py
