[project]
name = "project-1"
version = "0.1.0"
description = "Brandeis CS231 Project 1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.3.3",
  "pydantic>=2.11.9",
  "torch~=2.6.0 ; platform_machine != 'x86_64' or sys_platform != 'darwin'",
  "torcheval>=0.0.7",
  "tqdm>=4.67.1",
]


[project.scripts]
"main.py" = "project_1:cli"

[dependency-groups]
dev = ["pytest>=8.4.2"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
